--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
 argparse
-numpy>=1.20.0 # To ensure compatibility with OpenCV on Raspberry Pi.
+# To ensure compatibility with OpenCV on Raspberry Pi.
+numpy>=1.20.0
 opencv-python~=4.5.3.56
 pandas>=1.3.1
 tflite-runtime>=2.7.0
